omit dev at start

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
-    "build:prod": "webpack --mode production --omit=dev"
+    "start": "node dist/server.js --omit=dev"
   },
   "keywords": [],
   "author": "",
