--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/mongodb": "^4.0.6",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.4.0"
   }
 }
