--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npx tsc && node dist/server.js"
+    "start": "npx tsc && node dist/server.js",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
